err/megua.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/megua'...
Compiling './lib/python3.5/site-packages/megua/csection.py'...
***   File "./lib/python3.5/site-packages/megua/csection.py", line 315
    print sp + self.sec_name
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/megua/default2'...
Listing './lib/python3.5/site-packages/megua/default2/static'...
Compiling './lib/python3.5/site-packages/megua/ex_amc.py'...
***   File "./lib/python3.5/site-packages/megua/ex_amc.py", line 122
    print "================"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/megua/exbase.py'...
***   File "./lib/python3.5/site-packages/megua/exbase.py", line 276
    print 'Exercise "%s" is taking too long to make!' % self.unique_name()
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/megua/exlatex.py'...
***   File "./lib/python3.5/site-packages/megua/exlatex.py", line 111
    salvus.file(EXERCISE_PDF_PATHNAME,show=True,raw=True); print "\n"
                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/megua/exsiacua.py'...
***   File "./lib/python3.5/site-packages/megua/exsiacua.py", line 251
    print self.unique_name()," has multiplechoice in answer part. CHANGE <multiplechoice> to the %problem"
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/megua/localstore.py'...
***   File "./lib/python3.5/site-packages/megua/localstore.py", line 176
    print "Version in file: ", version, " -- Localstore code version: ", __VERSION__
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/megua/mathcommon.py'...
***   File "./lib/python3.5/site-packages/megua/mathcommon.py", line 185
    print "TYPE=",type(r)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/megua/megbook.py'...
***   File "./lib/python3.5/site-packages/megua/megbook.py", line 351
    print "Filename couldn't be opened: " , e.args[0], "\n"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/megua/megoptions.py'...
***   File "./lib/python3.5/site-packages/megua/megoptions.py", line 105
    print e.message
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/megua/megsiacua.py'...
***   File "./lib/python3.5/site-packages/megua/megsiacua.py", line 83
    print "megsiacua module: %s cannot be accessed on database." % unique_name
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/megua/parse_ex.py'...
***   File "./lib/python3.5/site-packages/megua/parse_ex.py", line 55
    re_blanks = re.compile(ur'[ \t]*\n',re.U)
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/megua/parse_param.py'...
***   File "./lib/python3.5/site-packages/megua/parse_param.py", line 136
    BASE_REGEX = ur'\W(\w+)@\(\)|'\
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/megua/platex.py'...
***   File "./lib/python3.5/site-packages/megua/platex.py", line 103
    raise ValueError, "platex.py say: filename must contain no spaces."
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/megua/scripts'...
Compiling './lib/python3.5/site-packages/megua/scripts/c_meg2smc.py'...
***   File "./lib/python3.5/site-packages/megua/scripts/c_meg2smc.py", line 133
    re_class = re.compile(ur'^class[ \t]+(E([a-zA-Z0-9]+)_\w+_\d+\w*)\(\w+\):\s*',re.U)
                                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/megua/scripts/main.py'...
***   File "./lib/python3.5/site-packages/megua/scripts/main.py", line 70
    print "Arguments:"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/megua/template'...
Listing './lib/python3.5/site-packages/megua/template/pt_pt'...
Compiling './lib/python3.5/site-packages/megua/ug.py'...
***   File "./lib/python3.5/site-packages/megua/ug.py", line 277
    print "ug.py say: 'asciiart' is not yet implemented"
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/megua/ur.py'...
***   File "./lib/python3.5/site-packages/megua/ur.py", line 400
    print "Cannot choose %d different elements from [%d,%d]" % (num,a,b)
                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/megua-2016.1.1a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
